@@ -2,6 +2,12 @@
 # Copyright 2008-2008 Chris Gianelloni; Distributed under the GPL v2
 # $Header: $
 
+  07 Nov 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
+  cacti/netapp/scripts/ss_netapp.php:
+  Change the OID calls in the ss_netapp_add_high_low function to work with
+  both indexed and non-indexed OID trees. This allows us to use this
+  function for adding FCP, iSCSI, NFS, and others.
+
   24 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
   cacti/netapp/templates/cacti_host_template_netapp_filer.xml:
   Updated the template with updates required for the latest scripts and XML.
